@@ -1,7 +1,4 @@
 from Acquisition import aq_parent, aq_inner
-from Products.CMFCore.interfaces import IActionSucceededEvent
-from Products.CMFCore.utils import getToolByName
-from Products.CMFPlone.CatalogTool import sortable_title
 from collective import dexteritytextindexer
 from datetime import datetime, timedelta
 from five import grok
@@ -24,8 +21,8 @@ from opengever.tabbedview.helper import external_edit_link
 from opengever.tabbedview.helper import linked
 from opengever.tabbedview.helper import readable_ogds_author
 from opengever.tabbedview.helper import readable_ogds_user
-from opengever.task import _
 from opengever.task import util
+from opengever.task import _
 from opengever.task.helper import path_checkbox
 from opengever.task.interfaces import ISuccessorTaskController
 from operator import attrgetter
@@ -34,6 +31,9 @@ from plone.directives import form, dexterity
 from plone.directives.dexterity import DisplayForm
 from plone.indexer import indexer
 from plone.indexer.interfaces import IIndexer
+from Products.CMFCore.interfaces import IActionSucceededEvent
+from Products.CMFCore.utils import getToolByName
+from Products.CMFPlone.CatalogTool import sortable_title
 from z3c.form.interfaces import HIDDEN_MODE
 from z3c.relationfield.schema import RelationChoice, RelationList
 from zc.relation.interfaces import ICatalog
@@ -389,12 +389,18 @@ class RelatedDocumentsTableSource(grok.MultiAdapter, BaseTableSource):
         objects = []
         for brain in brains:
             objects.append(brain.getObject())
-        for item in self.config.context.relatedItems:
 
+        # Related documents
+        for item in self.config.context.relatedItems:
             obj = item.to_object
             if (obj.portal_type == 'opengever.document.document'\
                     or obj.portal_type == 'ftw.mail.mail'):
+                # Store the information if the object was listed as
+                # a relation or not, so the tabbed view helper can
+                # set a special icon for related documents
+                obj._v__is_relation = True
                 objects.append(obj)
+
         objects = self.extend_query_with_ordering(objects)
         if self.config.filter_text:
             objects = self.extend_query_with_textfilter(
